A little bit of change
Shotokan stil…

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block title %}strona glowna{% endblock %}
 {% block header %}
-Aktualnie rozgrywane turnieje
+Aktualnie rozgrywane turnieje:
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
