--- a/karateshotokan/templates/createTournamentShotokan.html
+++ b/karateshotokan/templates/createTournamentShotokan.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} Karate shotokan {% endblock %}
-{% block header %} Tworzenie tunieju. {% endblock %}
+{% block header %} Tworzenie turnieju karate Shotokan: {% endblock %}
 {% block content %}
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> 
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -29,7 +29,7 @@ $(document).ready(function() {
         <tr>
             <td>
             <td><input type="submit" class="btn btn-default btn-primary" value="Zatwierdź">
-                <a href="/" class="btn btn-default">Anuluj</a></td>
+                <a href="javascript:history.back()" class="btn btn-default btn-primary">Anuluj</a></td>
         </tr>
     </table>
 </form>
