--- a/karateshotokan/templates/managerShotokan.html
+++ b/karateshotokan/templates/managerShotokan.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %} Karate shotokan {% endblock %}
-{% block header %} Wybierz turniej {% endblock %}
+{% block header %} Wybierz turniej: {% endblock %}
 {% block content %}
 
 <div class="container-fluid">
