--- a/main/templates/createteam.html
+++ b/main/templates/createteam.html
@@ -2,7 +2,7 @@
 
 {% block title %} Karate shotokan {% endblock %}
 {% block header %}
-Tworzenie drużyny
+Tworzenie drużyny:
 {% endblock %}
 {% block content %}
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css"> 
@@ -17,13 +17,13 @@ $(document).ready(function() {
     {% csrf_token %}
 	<table class="table" style="width: 10%">
         <tr>
-            <td><label>Podaj nazwę drużyny:</label>
+            <td><label>Nazwa: </label>
             <td>{{ form.name }}</td>
         </tr>
         <tr>
             <td>
             <td><input type="submit" class="btn btn-default btn-primary" value="Zatwierdź">
-                <a href="/" class="btn btn-default">Anuluj</a></td>
+                <a href="javascript:history.back()" class="btn btn-default btn-primary">Anuluj</a></td>
         </tr>
     </table>
 </form>
